k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ed-thomas-dev
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ed-thomas-dev
  template:
    metadata:
      labels:
        app: ed-thomas-dev
    
    spec:
      containers:
        - name: ed-thomas-dev
          image: ghcr.io/pixel-87/ed-thomas.dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
