k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ed-thomas-dev
  namespace: default
  labels:
    app: ed-thomas-dev
spec:
  type: ClusterIP
  selector:
    app: ed-thomas-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
